# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: my_test.yml  setup.cfg  test_linter.yml
activate/: pyvenv.cfg
gendiff/: __init__.py  cli.py  compare_files.py  data_converter.py
gendiff/formatters/: json_formatter.py  plain.py  stylish.py
gendiff/scripts/: diff.py  gendiff.py
tests/: test_json.py
tests/fixtures/: result_json.json  result_json.txt
