[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Jane Drobova <janejuly1@gmail.com>"]
readme = "README.md"
packages = [
    { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
flake8 = "^7.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
